fixed the teddy bryan issue now the fonts are the same on both mobile and tablet. Also changed the border spacing on the navbar buttons. Also changed the spacing on the title for the photo gallery to match the mockup. Also changed the footer Bandsite header to be fixed in the top right of the footer div.

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -78,22 +78,24 @@
                 @include tablet {
                     font-size: 2rem;
                     line-height: 3rem;
-
-                    &-teddy-bryan {
-
-                        @include tablet {
-                            @include mobile-body-copy;
-                            font-size: 1.55rem;
-                            font-weight: 600;
-                        }
-
-
-                    }
                 }
-
-
-
             }
+
+            &-quote-teddy-bryan {
+                @include mobile-body-copy;
+                font-weight: 600;
+                letter-spacing: 1px;
+                line-height: 1.5rem;
+
+                @include tablet {
+                    font-size: 1.55rem;
+                    font-weight: 600;
+                }
+            }
+
+
+
+
         }
 
     }
